# Drawpp

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Grammary_Draw++.txt  Pipfile  README.md  Syntaxe de Draw++.txt  Syntaxe langage draw++.docx  Syntaxe langage draw++.md  grammar.ebnf  pyproject.toml  run.py  test.py
include/: DrawppFunction.h  cursor.h  drawppVar.h
libs/: build_sdlEncapsulation.py
libs/SDL2-devel-2.30.11-VC/cmake/: sdl2-config-version.cmake
libs/sdlEncapsulation/: CMakeLists.txt
libs/sdlEncapsulation/cmake/: sdlencapsulation-config.cmake
libs/sdlEncapsulation/include/: cursor.h  sdlEncapsulation.h
libs/sdlEncapsulation/src/: cursor.c  sdlEncapsulation.c
py/: Ctranslater.py  Function.py  translater.py
pydpp/: __init__.py
pydpp/compiler/: __init__.py  annotations.py  incremental.py  parser.py  position.py  problem.py  semantic.py  semantic_tmp.py  suggestion.py  syntax.py  tokenizer.py  toolchain.py  transpiler.py  types.py
pydpp/compiler/CTranslater/: CTranslater.py  Variable.py  _ConditionalInstr.py  _Cursor.py  _Function.py  _WhileLoop.py  __init__.py  _const.py  _error.py  _subBlock.py
pydpp/compiler/CTranslater/CTranslater_test/: note
pydpp/compiler/CTranslater/CTranslater_test/test_01/: test.console.txt  test.out.c  test.trad.py  testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_02/: testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_03/: testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_04/: testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_05/: testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_06/: testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_08/: testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_09/: testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_10/: testDrawpp.py
pydpp/compiler/CTranslater/CTranslater_test/test_11/: testDrawpp.py
pydpp/compiler/examples/: tree_manipulation.py
pydpp/compiler/syntax/: __init__.py  base.py  codegen.py  generated.py  genext.py  nodedefs.py
pydpp/compiler/windows/: vsenv.bat
pydpp/ide/: Container.py  __main__.py
pydpp/ide/Metadata/: cercle.txt  test.dpp
src/: DrawppFunction.c  cursor.c  drawppVar.c  main.c
